tests/fixtures/methods/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: methods
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /items
